--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,96 @@
-body{
-    background: linear-gradient(purple, gold, black);
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Century 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+
 }
-.chave{
-    width: 500px;
-    height: 500px;
-    padding-left: 650px;
+.rodape{
+    position: absolute;
+    top: 98%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: white;
 }
-.img-fluid{
-    width: 450px;
-    height: 450px;
-    
+
+.home{
+    background-image:linear-gradient(rgba(0, 0, 0, 0.7),rgba(0,0,0,0.7)), url('../images/talvez.jpg');
+     
+    /* <img class="chave1" src="{{url('images/chavedms.jpg')}}">
+    <img src="{{url('images/chavedms.jpg')}}" class="img-fluid" alt="..."> */
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+}
+
+ul{
+    float: right;
+    list-style-type:none;
+    margin-top: 30px;
+    margin-left: 5px;
+}
+
+ul li{
+    display: inline-block;
+}
+
+ul li a{
+    text-decoration: none;
+    color: white;
+    padding: 5px 20px;
+    border: 1px solid transparent;
+    transition: 0.6s ease; 
+}
+
+ul li a:hover{
+    background-color: #fff;
+    color: #000;
+ }
+
+ ul li.active a{
+    background-color: #fff;
+    color: #000;
+ }
+
+ .logo img{
+    float: left;
+    width: 200px;
+    height: auto;
+ }
+
+ .main{
+    max-width: 1200px;
+    margin: auto;
+ }
+
+ .title{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+ }
+
+ .title h1{
+    color: #fff;
+    font-size: 50px;
+ }
+
+.button{
+    position: absolute;
+    top: 62%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.btn{
+    border: 1px solid #fff;
+    padding: 10px 30px;
+    color: #fff;
+    text-decoration: none;
+    transition: 0.6s ease;
+}
+
+.btn:hover{
+    background-color: #fff;
+    color: #000;
 }
